add tel and email for superadmin

--- a/app/assets/stylesheets/networks.css.scss
+++ b/app/assets/stylesheets/networks.css.scss
@@ -29,21 +29,21 @@
 		}
 		.himself{
 			padding: 0;
-			background: #FaFaFa;
+			background: rgba(140, 153, 36,.1);
 			.level1{
-				background: #F7F7F7;
+				background: rgba(140, 153, 36,.2);
 				border: 1px solid #F3F3F3;
 				.level2{
-					background: #F3F3F3;
+					background: rgba(140, 153, 36,.3);
 					border: 1px solid #eee;
 					.level3{
-						background: #eee;
+						background: rgba(140, 153, 36,.4);
 						border: 1px solid #e7e7e7;
 						.level4{
-							background: #e7e7e7;
+							background: rgba(140, 153, 36,.5);
 							border: 1px solid #e1e1e1;
 							.level5{
-								background: #e1e1e1;
+								background: rgba(140, 153, 36,.6);
 								border: 1px solid #D3D3D3;
 							}
 						}
