--- a/app/assets/stylesheets/homes.css.scss
+++ b/app/assets/stylesheets/homes.css.scss
@@ -1,5 +1,20 @@
 $green: #b5c023;
 #home{		
+	#quote{
+		border: 1px solid #eee;
+		h3{
+			background: #E4E4E4;
+			padding: 8px 16px;
+			text-align: center;
+			font-family: sans-serif;
+			text-shadow: 0px 2px #F8F8F8;
+			color: #585858;
+			border-right: 10px solid #ECECEC;
+			border-top: 10px solid #F1F1F1;
+			border-bottom: 10px solid #F0F0F0;
+			border-left: 10px solid #F3F3F3;
+		}
+	}
 	#insert_trip{
 		position: relative;	
 		.title h4{
