--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -33,21 +33,7 @@
 	</div>
 
 	<div id="quote" class="row">
-		<div class="col-xs-12">
-			<h3>
-				همسفر یاب سایتی برای یافتن همسفر در سفرهای شهری و بین شهری است. با به اشتراک گذاشتن سفرها در همسفریاب، تردد خودروهای تک سرنشین کاهش می یابد و در نتیجه ترافیک و آلودگی هوا کم می شود. 
-			</h3>
-		</div>
-		
-		<div class="col-xs-12">
-		
-		</div>
-		<div class="col-xs-12">
-		
-		</div>
-		<div class="col-xs-12">
-		
-		</div>
-
+	  <%= render 'how_it_works'%>	
 	</div>
+
 </div>
