--- a/app/views/subtrips/show.html.erb
+++ b/app/views/subtrips/show.html.erb
@@ -1,4 +1,4 @@
-<%= @page_title = t(".title", origin: @subtrip.origin_city, destination: @subtrip.destination_city ) %>
+<% @page_title = t(".title", origin: @subtrip.origin_city, destination: @subtrip.destination_city ) %>
 
 <div class="subtrip_single">
 	<div class="col-sm-7">
