add nearest trips to profile and create a page for it

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -89,6 +89,15 @@ h2{
 	.gravatar{
 		position: relative;
 	}
+	#all_upcoming_trips{
+		.all_trips_btn{
+			margin: 8px 0 8px;
+			.all_trips_btn{
+				text-align: center;
+			}
+		}
+	}
+
 	.hidden-lg{
 		.userAvatar{
 			position: absolute;
