--- a/app/views/subtrips/show.html.erb
+++ b/app/views/subtrips/show.html.erb
@@ -4,6 +4,7 @@
 	<div class="col-sm-7">
 		<%= render 'subtrips/show/subtrip_overview' %>
 		<%= render 'subtrips/show/gmap' %>
+		<%= render 'shared/comment_frame' %>
 	</div>
 
 	<div class="col-sm-5">
