some unimportant changes

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -51,7 +51,7 @@
         <div class="col-xs-4 col-sm-2 list">
           <h3 class="title"><%= t('.about_hamsafaryab') %></h3>
           <ul>
-            <li><%= link_to t('.ads_in_hamsafaryab'), page_path("ads-in-hamsafaryab"), class: "footer_list" %></li>
+<!--             <li><%#= link_to t('.ads_in_hamsafaryab'), page_path("ads-in-hamsafaryab"), class: "footer_list" %></li> -->
             <li><%= link_to t('.benefits'), page_path("benefits"), class: "footer_list" %></li>
             <li><%= link_to t('.contact'), contact_pages_path, class: "footer_list" %></li>
             <li><%= link_to t('.about_us'), page_path("about-us"), class: "footer_list" %></li>
