--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html>
 <head>
   <title> 
     <% if current_user && ( (notification_exist? @unread_messages_notifications) || 
