add farsi font when language is farsi

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -39,7 +39,7 @@
     <%= stylesheet_link_tag ASSETS_PATH+"css/bootstrap-rtl.css", media: "all", "data-turbolinks-track" => true %>
   <% end %>
 
-  <%= render 'shared/style' %>
+  <%= render 'shared/lang_defferent_styles' %>
 
   <%= csrf_meta_tags %>
 </head>
