remove unused fonts from front dir

--- a/app/views/shared/_lang_defferent_styles.html.erb
+++ b/app/views/shared/_lang_defferent_styles.html.erb
@@ -1,8 +1,9 @@
 <style>
   <% if params[:locale] == 'fa' %>
-    p, h1,h2,h3,h4,h5,h6,a {
-      font-family: 'B Koodak', verdana, arial, helvetica, sans-serif;
-    }
+      p, h1,h2,h3,h4,h5,h6,a, li, th, td, select {
+        font-family: 'B Koodak', verdana, arial, helvetica, sans-serif;
+      }
+
   	.pagination .previous_page{  border-radius: 2px 20px 20px 2px;	}
     .pagination .next_page{   border-radius: 20px 2px 2px 20px;  }
   <% else %>
