remove facebook like

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -27,7 +27,7 @@
   			<% end %>	
         <li class="hidden-sm"><%= link_to t("navbar.how_it_works"), page_path('how_does_hamsafaryab_work'), class: "text-nav" %></li>
 
-        <%= render 'application/nav/facebook_like' %>
+        <%#= render 'application/nav/facebook_like' %>
         
       </ul>
 
