add viewport to head

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -26,6 +26,10 @@
   <meta name="keywords"   content="<%= t ".tags" %> , dp2dxhgz2DSL0XBruyi43dku3so" />
 
   <meta name="description" content="<%= t ".description"  %>">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <%= favicon_link_tag IMAGES_PATH + "ico/favicon.gif" %>
   <script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
